--- a/index.html
+++ b/index.html
@@ -44,36 +44,47 @@
     button:hover {
       background-color: #facc15;
     }
+
+    #status {
+      margin-top: 10px;
+      color: white;
+    }
   </style>
 </head>
 <body>
   <h1>NewGrounds Ripper</h1>
   <input id="urlInput" type="text" placeholder="Paste Newgrounds URL (e.g. https://www.newgrounds.com/audio/listen/899197)" />
-  <button onclick="downloadMP3()">Download MP3</button>
+  <button onclick="rip()">Download MP3</button>
+  <p id="status"></p>
 
   <script>
-    function downloadMP3() {
+    async function rip() {
       const url = document.getElementById("urlInput").value.trim();
-      const match = url.match(/listen\/(\d+)/);
+      const status = document.getElementById("status");
+      status.textContent = "Searching for MP3...";
 
-      if (!match) {
-        alert("Please enter a valid Newgrounds audio URL.");
-        return;
+      try {
+        const response = await fetch(`https://<TU-PROYECTO>.railway.app/rip?url=${encodeURIComponent(url)}`);
+        const data = await response.json();
+
+        if (data.mp3) {
+          status.textContent = "Downloading...";
+
+          const a = document.createElement('a');
+          a.href = data.mp3;
+          a.download = data.mp3.split('/').pop();
+          document.body.appendChild(a);
+          a.click();
+          document.body.removeChild(a);
+
+          status.textContent = "Download started!";
+        } else {
+          status.textContent = "MP3 not found.";
+        }
+      } catch (err) {
+        console.error(err);
+        status.textContent = "An error occurred while ripping.";
       }
-
-      const id = match[1];
-      const folder = id.slice(0, -3) + "000";
-
-      // We'll try to download the file even if we don't know the real name.
-      const downloadUrl = `https://audio.ngfiles.com/${folder}/${id}.mp3`;
-
-      // Create an invisible link and trigger the download
-      const a = document.createElement("a");
-      a.href = downloadUrl;
-      a.download = `${id}.mp3`;
-      document.body.appendChild(a);
-      a.click();
-      document.body.removeChild(a);
     }
   </script>
 </body>
