--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       status.textContent = "Searching for MP3...";
 
       try {
-        const response = await fetch(`https://<TU-PROYECTO>.railway.app/rip?url=${encodeURIComponent(url)}`);
+        const response = await fetch(`https://ngripper-src-production.up.railway.app/rip?url=${encodeURIComponent(url)}`)
         const data = await response.json();
 
         if (data.mp3) {
