--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <style>
     body {
       background-color: #111;
-      color: #fbbf24;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #f4f4f4;
+      font-family: 'Arial', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -18,74 +18,82 @@
     }
 
     h1 {
-      font-size: 3rem;
-      margin-bottom: 20px;
+      color: #ffcc00;
+      text-shadow: 1px 1px 3px #000;
     }
 
-    input, button {
+    input {
+      width: 300px;
       padding: 10px;
-      font-size: 1rem;
-      border-radius: 5px;
+      margin: 20px 0;
       border: none;
-      margin: 5px;
-    }
-
-    input[type="text"] {
-      width: 360px;
+      border-radius: 5px;
+      font-size: 1em;
     }
 
     button {
-      background-color: #fbbf24;
-      color: #111;
+      padding: 10px 20px;
+      background-color: #ff9900;
+      border: none;
+      border-radius: 5px;
+      color: #000;
       font-weight: bold;
       cursor: pointer;
+      transition: background 0.3s;
     }
 
     button:hover {
-      background-color: #facc15;
+      background-color: #ffcc00;
     }
 
-    #status {
+    .error {
+      color: red;
       margin-top: 10px;
-      color: white;
     }
   </style>
 </head>
 <body>
+
   <h1>NewGrounds Ripper</h1>
-  <input id="urlInput" type="text" placeholder="Paste Newgrounds URL (e.g. https://www.newgrounds.com/audio/listen/899197)" />
-  <button onclick="rip()">Download MP3</button>
-  <p id="status"></p>
+  <input type="text" id="ng-url" placeholder="Paste Newgrounds song URL..." />
+  <button onclick="downloadMP3()">Download MP3</button>
+  <div class="error" id="error-msg"></div>
 
   <script>
-    async function rip() {
-      const url = document.getElementById("urlInput").value.trim();
-      const status = document.getElementById("status");
-      status.textContent = "Searching for MP3...";
+    async function downloadMP3() {
+      const input = document.getElementById('ng-url');
+      const errorMsg = document.getElementById('error-msg');
+      const url = input.value.trim();
+      errorMsg.textContent = '';
+
+      if (!url.includes('newgrounds.com/audio/listen/')) {
+        errorMsg.textContent = 'Invalid Newgrounds audio URL.';
+        return;
+      }
 
       try {
-        const response = await fetch(`https://ngripper-src-production.up.railway.app/rip?url=${encodeURIComponent(url)}`)
+        const response = await fetch(`https://<TU_BACKEND>.up.railway.app/rip?url=${encodeURIComponent(url)}`);
         const data = await response.json();
 
-        if (data.mp3) {
-          status.textContent = "Downloading...";
-
-          const a = document.createElement('a');
-          a.href = data.mp3;
-          a.download = data.mp3.split('/').pop();
-          document.body.appendChild(a);
-          a.click();
-          document.body.removeChild(a);
-
-          status.textContent = "Download started!";
-        } else {
-          status.textContent = "MP3 not found.";
+        if (!data.mp3) {
+          errorMsg.textContent = 'MP3 not found.';
+          return;
         }
-      } catch (err) {
-        console.error(err);
-        status.textContent = "An error occurred while ripping.";
+
+        const link = document.createElement('a');
+        link.href = data.mp3;
+        link.download = ''; // para que fuerce la descarga
+        link.style.display = 'none';
+        document.body.appendChild(link);
+        link.click();
+        document.body.removeChild(link);
+
+      } catch (error) {
+        console.error(error);
+        errorMsg.textContent = 'Error downloading file.';
       }
     }
   </script>
+
 </body>
 </html>
