--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NewGrounds Ripper</title>
+  
+  <!-- Logo de la pestaña -->
+  <link rel="icon" type="image/png" href="logo.png">
+  
   <style>
     body {
       font-family: Arial, sans-serif;
