--- a/index.html
+++ b/index.html
@@ -4,87 +4,100 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NewGrounds Ripper</title>
-  
-  <!-- Logo de la pestaña -->
-  <link rel="icon" type="image/png" href="logo.png">
-  
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #f5f5f5;
-      text-align: center;
-      padding: 50px;
-    }
-    input, button {
-      padding: 10px;
-      margin: 10px;
-      font-size: 16px;
-    }
-    button {
-      cursor: pointer;
-      background-color: #4CAF50;
-      color: white;
-      border: none;
-      border-radius: 5px;
-    }
-    button:hover {
-      background-color: #45a049;
-    }
-    #errorMsg {
-      color: red;
-      margin-top: 20px;
-    }
-  </style>
 </head>
 <body>
-
   <h1>NewGrounds Ripper</h1>
-  <p>Enter the URL of a Newgrounds audio page to download the MP3.</p>
-
-  <input type="text" id="audioUrl" placeholder="Enter Newgrounds Audio URL" size="50">
-  <button id="downloadBtn">Download MP3</button>
-
-  <p id="errorMsg"></p>
+  <p>Enter the song ID (from Newgrounds) and click "Download" to get the MP3 file.</p>
+  
+  <!-- Input field to get song ID -->
+  <input type="text" id="songid" placeholder="Enter Song ID" />
+  <button onclick="run()">Download</button>
+  
+  <div id="run"></div>
 
   <script>
-    const downloadBtn = document.getElementById('downloadBtn');
-    const audioUrlInput = document.getElementById('audioUrl');
-    const errorMsg = document.getElementById('errorMsg');
+    function run() {
+      var id = document.getElementById("songid").value;
+      var output = document.getElementById("run");
 
-    downloadBtn.addEventListener('click', async () => {
-      const url = audioUrlInput.value.trim();
+      var text = document.createElement("p");
 
-      if (!url) {
-        errorMsg.textContent = 'Please enter a valid URL.';
+      if(id == "") {
+        text.innerHTML = "Song ID is empty!";
+        output.appendChild(text);
         return;
       }
 
-      // Request to backend to get the MP3 URL
-      try {
-        const response = await fetch(`https://ngripper-src-production.up.railway.app/rip?url=${encodeURIComponent(url)}`);
-        const data = await response.json();
+      text.innerHTML = "Starting download with ID "+id;
+      output.appendChild(text);
 
-        if (!data.mp3) {
-          errorMsg.textContent = 'MP3 not found.';
+      getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id).then(function(body) {
+        var data = JSON.parse(body).contents;
+        var code = JSON.parse(body).status.http_code;
+        if(code != 200) {
+          if(code == 404) {
+            outMSG("The song could not be found! Please check the song id and try again! (error 404)");
+            return;
+          }
+          outMSG("Something went wrong! Please check your internet connection and try again! Error Code: "+code);
           return;
         }
 
-        // Create an invisible link to trigger the download
-        const link = document.createElement('a');
-        link.href = data.mp3;
-        link.download = '';  // The file will be downloaded without specifying the filename
-        link.style.display = 'none';
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
+        var url = data.substring(data.indexOf("<![CDATA[")+9);
+        url = url.substring(url.indexOf("embedController([")+17);
+        url = url.substring(0, url.indexOf("\",\""));
+        url = url.substring(0, url.indexOf("?"));
+        url = url.substring(url.indexOf("url")+3);
+        url = url.substring(url.indexOf(":\"")+2);
+        url = url.replace(/\\\//g, "/");
 
-        errorMsg.textContent = '';  // Clear any previous errors
-      } catch (error) {
-        console.error(error);
-        errorMsg.textContent = 'Error downloading file.';
-      }
-    });
+        var title = data.substring(data.indexOf("<title>")+7);
+        title = title.substring(0, title.lastIndexOf("</title>"))
+
+        var msg = document.createElement("p");
+        msg.innerHTML = "Done!";
+        output.appendChild(msg);
+
+        // Initiate download automatically
+        var out = document.createElement("a");
+        out.href = url;
+        out.download = title;  // This will set the file name when downloaded
+        out.style.display = "none";  // Hide the download link
+        document.body.appendChild(out);
+        out.click();  // Trigger the download
+        document.body.removeChild(out);  // Remove the link after clicking
+      }, function(status) {
+        if(status == 404) {
+          outMSG("The song could not be found! Please check the song id and try again! (error 404)");
+          return;
+        }
+        outMSG("Something went wrong! Please check your internet connection and try again! Error Code: "+status);
+      });
+    }
+
+    var getPage = function(url) {
+      return new Promise(function(resolve, reject) {
+        var xhr = new XMLHttpRequest();
+        xhr.open('get', url, true);
+        xhr.responseType = 'text';
+        xhr.onload = function() {
+          var status = xhr.status;
+          if (status == 200) {
+            resolve(xhr.response);
+          } else {
+            reject(status);
+          }
+        };
+        xhr.send();
+      });
+    };
+
+    function outMSG(text) {
+      var output = document.getElementById("run");
+      var msg = document.createElement("p");
+      msg.innerHTML = text;
+      output.appendChild(msg);
+    }
   </script>
-
 </body>
 </html>
