--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NewGrounds Ripper</title>
   <style>
-    /* General Styles */
     body {
-      background-color: #111; /* Fondo negro */
+      background-color: #111;
       color: white;
       font-family: 'Arial', sans-serif;
       text-align: center;
@@ -17,7 +16,7 @@
     }
 
     h1 {
-      color: #FF4500; /* Naranja */
+      color: #FF4500;
       font-size: 2.5rem;
       text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
       margin-top: 50px;
@@ -30,7 +29,7 @@
       margin: 10px;
       border-radius: 8px;
       border: 2px solid #FF4500;
-      background-color: #222; /* Fondo oscuro para input */
+      background-color: #222;
       color: #FF4500;
       transition: transform 0.2s ease-in-out, background-color 0.3s ease;
     }
@@ -41,7 +40,6 @@
       transform: scale(1.1);
     }
 
-    /* Animaciones suaves */
     .fadeIn {
       animation: fadeIn 1s ease-out;
     }
@@ -55,16 +53,10 @@
       }
     }
 
-    .blur-background {
-      filter: blur(10px);
-      transition: filter 0.5s ease;
-    }
-
     #run {
       margin-top: 30px;
     }
 
-    /* Link de descarga */
     a {
       font-size: 1.2rem;
       color: #FF4500;
@@ -77,7 +69,6 @@
       transform: scale(1.1);
     }
 
-    /* Mensajes de estado */
     p {
       font-size: 1.2rem;
       color: #fff;
@@ -87,11 +78,10 @@
 </head>
 <body>
 
-  <div id="app" class="blur-background">
+  <div id="app">
     <h1 class="fadeIn">NewGrounds Ripper</h1>
     <p class="fadeIn">Enter the song ID.</p>
     
-    <!-- Input field to get song ID -->
     <input type="text" id="songid" placeholder="Enter Song ID" class="fadeIn" />
     <button onclick="run()" class="fadeIn">Download</button>
   
@@ -106,12 +96,12 @@
       var text = document.createElement("p");
 
       if(id == "") {
-        text.innerHTML = "No Song ID";
+        text.innerHTML = "Song ID is empty!";
         output.appendChild(text);
         return;
       }
 
-      text.innerHTML = "Please wait...";
+      text.innerHTML = "Starting download with ID " + id;
       output.appendChild(text);
 
       getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id).then(function(body) {
@@ -119,23 +109,23 @@
         var code = JSON.parse(body).status.http_code;
         if(code != 200) {
           if(code == 404) {
-            outMSG("The song could not be found! Please check the song id and try again! (error 404)");
+            outMSG("Not Found");
             return;
           }
-          outMSG("Something went wrong! Please check your internet connection and try again! Error Code: "+code);
+          outMSG("Something went wrong. ERROR CODE " + code);
           return;
         }
 
-        var url = data.substring(data.indexOf("<![CDATA[")+9);
-        url = url.substring(url.indexOf("embedController([")+17);
+        var url = data.substring(data.indexOf("<![CDATA[") + 9);
+        url = url.substring(url.indexOf("embedController([") + 17);
         url = url.substring(0, url.indexOf("\",\""));
         url = url.substring(0, url.indexOf("?"));
-        url = url.substring(url.indexOf("url")+3);
-        url = url.substring(url.indexOf(":\"")+2);
+        url = url.substring(url.indexOf("url") + 3);
+        url = url.substring(url.indexOf(":\"") + 2);
         url = url.replace(/\\\//g, "/");
 
-        var title = data.substring(data.indexOf("<title>")+7);
-        title = title.substring(0, title.lastIndexOf("</title>"))
+        var title = data.substring(data.indexOf("<title>") + 7);
+        title = title.substring(0, title.lastIndexOf("</title>"));
 
         var msg = document.createElement("p");
         msg.innerHTML = "Done!";
@@ -153,7 +143,7 @@
           outMSG("Not Found");
           return;
         }
-        outMSG("Something went wrong. ERROR CODE "+status);
+        outMSG("Something went wrong. ERROR CODE " + status);
       });
     }
 
@@ -184,3 +174,4 @@
 
 </body>
 </html>
+
