--- a/index.html
+++ b/index.html
@@ -12,7 +12,28 @@
       text-align: center;
       margin: 0;
       padding: 0;
-      transition: background-color 0.3s ease;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    #background {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: #000;
+      filter: blur(10px);
+      z-index: -1;
+    }
+
+    .content {
+      position: relative;
+      z-index: 1;
+      text-align: center;
     }
 
     h1 {
@@ -78,7 +99,9 @@
 </head>
 <body>
 
-  <div id="app">
+  <div id="background"></div> <!-- Background with blur effect -->
+
+  <div class="content">
     <h1 class="fadeIn">NewGrounds Ripper</h1>
     <p class="fadeIn">Enter the song ID.</p>
     
@@ -174,4 +197,3 @@
 
 </body>
 </html>
-
