--- a/index.html
+++ b/index.html
@@ -4,43 +4,79 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NewGrounds Ripper</title>
+  <link rel="icon" href="logo.png" type="image/png"> <!-- Logo para la pestaña -->
   <style>
     body {
       background-color: #111;
+      background-image: url('bg.png'); /* Fondo con imagen */
+      background-size: cover;
+      background-position: center;
       color: white;
       font-family: 'Arial', sans-serif;
       text-align: center;
       margin: 0;
       padding: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      overflow: hidden;
+      transition: background-color 0.3s ease;
     }
 
-    #background {
-      position: absolute;
+    /* Estilo para el header (menú superior) */
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px;
+      background-color: rgba(0, 0, 0, 0.7);
+      position: fixed;
       top: 0;
       left: 0;
       width: 100%;
-      height: 100%;
-      background-color: #000;
-      filter: blur(10px);
-      z-index: -1;
+      z-index: 10;
     }
 
-    .content {
-      position: relative;
-      z-index: 1;
-      text-align: center;
+    header img {
+      width: 50px;
+      height: auto;
+    }
+
+    header h1 {
+      color: #FF4500;
+      font-size: 1.8rem;
+      margin-left: 10px;
+    }
+
+    /* Botón de Support */
+    #supportBtn {
+      background-color: #FF4500;
+      color: #111;
+      font-size: 1.1rem;
+      padding: 10px 20px;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+    }
+
+    #supportBtn:hover {
+      background-color: #FF6A00;
+    }
+
+    #app {
+      background-color: rgba(0, 0, 0, 0.7);
+      border-radius: 10px;
+      padding: 30px;
+      max-width: 500px;
+      margin: 120px auto 50px;
+      box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.7);
+    }
+
+    #logo {
+      width: 200px;
+      margin-bottom: 20px;
     }
 
     h1 {
       color: #FF4500;
       font-size: 2.5rem;
       text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-      margin-top: 50px;
       transition: color 0.3s ease;
     }
 
@@ -95,13 +131,31 @@
       color: #fff;
       margin: 10px;
     }
+
+    footer {
+      text-align: center;
+      font-size: 1rem;
+      margin-top: 50px;
+      color: #fff;
+    }
+
+    footer p {
+      margin: 0;
+    }
+
   </style>
 </head>
 <body>
 
-  <div id="background"></div> <!-- Background with blur effect -->
+  <header>
+    <div style="display: flex; align-items: center;">
+      <img src="logo.png" alt="NG Ripper Logo">
+      <h1>NG Ripper</h1>
+    </div>
+    <button id="supportBtn" onclick="window.location.href='support.html'">Support</button>
+  </header>
 
-  <div class="content">
+  <div id="app">
     <h1 class="fadeIn">NewGrounds Ripper</h1>
     <p class="fadeIn">Enter the song ID.</p>
     
@@ -111,7 +165,13 @@
     <div id="run"></div>
   </div>
 
+  <footer>
+    <p>&#169; NGRipper <span id="year"></span></p>
+  </footer>
+
   <script>
+    document.getElementById('year').textContent = new Date().getFullYear(); // Pone el año actual en el footer
+
     function run() {
       var id = document.getElementById("songid").value;
       var output = document.getElementById("run");
