--- a/index.html
+++ b/index.html
@@ -4,163 +4,163 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>NewGrounds Ripper</title>
-  <link rel="icon" href="logo.png" type="image/png">
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
-    body {
-      background-color: #111;
-      background-image: url('bg.png');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      font-family: 'Arial', sans-serif;
-      text-align: center;
+    * {
       margin: 0;
       padding: 0;
-      transition: background-color 0.3s ease;
+      box-sizing: border-box;
+    }
+
+    body {
+      background: url('bg.png') no-repeat center center fixed;
+      background-size: cover;
+      font-family: 'Arial', sans-serif;
+      color: white;
+      min-height: 100vh;
+      display: flex;
+      flex-direction: column;
     }
 
     header {
       display: flex;
-      justify-content: flex-start;
+      justify-content: space-between;
       align-items: center;
-      padding: 20px;
+      padding: 15px 30px;
       background-color: rgba(0, 0, 0, 0.7);
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      z-index: 10;
+      box-shadow: 0 0 10px #000;
     }
 
-    header img {
-      width: 50px;
-      height: 50px;
+    .logo-container {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+
+    .logo {
+      width: 40px;
+      height: 40px;
       border-radius: 10px;
+      object-fit: cover;
     }
 
-    header h1 {
+    .title {
+      font-size: 1.5rem;
       color: #FF4500;
-      font-size: 1.8rem;
-      margin-left: 10px;
+      font-weight: bold;
     }
 
-    #supportBtn {
+    .support-btn {
       background-color: #FF4500;
-      color: #111;
-      font-size: 1.1rem;
-      padding: 10px 20px;
-      border-radius: 8px;
       border: none;
+      color: #111;
+      padding: 10px 20px;
+      font-size: 1rem;
+      border-radius: 8px;
       cursor: pointer;
-      margin-left: 20px;
+      transition: background-color 0.3s ease;
     }
 
-    #supportBtn:hover {
-      background-color: #E03C00;
+    .support-btn:hover {
+      background-color: #ff652f;
     }
 
-    #app {
-      margin-top: 120px;
+    main {
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      padding: 40px 20px;
     }
 
-    h1 {
+    .container {
+      background-color: rgba(0, 0, 0, 0.6);
+      border-radius: 15px;
+      padding: 30px;
+      text-align: center;
+      width: 100%;
+      max-width: 500px;
+      box-shadow: 0 0 10px #000;
+    }
+
+    .container h2 {
+      font-size: 1.8rem;
       color: #FF4500;
-      font-size: 2.5rem;
-      text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
-      margin-top: 50px;
+      margin-bottom: 5px;
+    }
+
+    .container h3 {
+      font-size: 1.2rem;
+      margin-bottom: 20px;
+      color: #ccc;
     }
 
     input, button {
-      font-size: 1.2rem;
       padding: 10px;
-      margin: 10px;
+      font-size: 1rem;
+      margin: 10px 5px;
       border-radius: 8px;
       border: 2px solid #FF4500;
       background-color: #222;
       color: #FF4500;
-      transition: transform 0.2s ease-in-out, background-color 0.3s ease;
+      transition: 0.3s ease;
     }
 
     input:focus, button:hover {
       background-color: #FF4500;
       color: #111;
-      transform: scale(1.1);
-    }
-
-    .fadeIn {
-      animation: fadeIn 1s ease-out;
-    }
-
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 1;
-      }
+      transform: scale(1.05);
     }
 
     #run {
-      margin-top: 30px;
-    }
-
-    a {
-      font-size: 1.2rem;
-      color: #FF4500;
-      text-decoration: none;
-      transition: color 0.3s ease, transform 0.3s ease;
-    }
-
-    a:hover {
-      color: #fff;
-      transform: scale(1.1);
-    }
-
-    p {
-      font-size: 1.2rem;
-      color: #fff;
-      margin: 10px;
+      margin-top: 20px;
+      font-size: 1rem;
     }
 
     footer {
-      position: fixed;
-      bottom: 10px;
-      width: 100%;
       text-align: center;
-      color: #fff;
+      padding: 20px;
+      font-size: 0.9rem;
+      background-color: rgba(0, 0, 0, 0.6);
+      box-shadow: 0 -2px 10px #000;
     }
   </style>
 </head>
 <body>
 
   <header>
-    <a href="index.html"><img src="logo.png" alt="Logo"></a>
-    <h1>NG Ripper</h1>
-    <a id="supportBtn" href="support.html">Support</a>
+    <div class="logo-container">
+      <img src="logo.png" alt="Logo" class="logo">
+      <div class="title">NGRipper</div>
+    </div>
+    <button class="support-btn" onclick="location.href='support.html'">Support Me</button>
   </header>
 
-  <div id="app">
-    <h1 class="fadeIn">NewGrounds Ripper</h1>
-    <p class="fadeIn">Enter the song ID.</p>
-    <input type="text" id="songid" placeholder="Enter Song ID" class="fadeIn" />
-    <button onclick="run()" class="fadeIn">Download</button>
-    <div id="run"></div>
-  </div>
+  <main>
+    <div class="container">
+      <h2>NewGrounds Audio</h2>
+      <h3>Downloader</h3>
+      <input type="text" id="songid" placeholder="Enter Song ID">
+      <button onclick="run()">Download</button>
+      <div id="run"></div>
+    </div>
+  </main>
 
   <footer>
-    <p>&copy; NGRipper <span id="year"></span></p>
+    &copy; NGRipper <span id="year"></span>
   </footer>
 
   <script>
-    document.getElementById("year").innerText = new Date().getFullYear();
+    document.getElementById("year").textContent = new Date().getFullYear();
 
     function run() {
       var id = document.getElementById("songid").value;
       var output = document.getElementById("run");
+      output.innerHTML = '';
 
       var text = document.createElement("p");
 
-      if(id == "") {
+      if(id === "") {
         text.innerHTML = "No Song ID";
         output.appendChild(text);
         return;
@@ -169,15 +169,13 @@
       text.innerHTML = "Wait...";
       output.appendChild(text);
 
-      getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id).then(function(body) {
+      getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id)
+      .then(function(body) {
         var data = JSON.parse(body).contents;
         var code = JSON.parse(body).status.http_code;
-        if(code != 200) {
-          if(code == 404) {
-            outMSG("Not Found");
-            return;
-          }
-          outMSG("Something went wrong. ERROR CODE " + code); 
+
+        if(code !== 200) {
+          outMSG(code === 404 ? "Not Found" : "Something went wrong. ERROR CODE " + code);
           return;
         }
 
@@ -196,18 +194,17 @@
         msg.innerHTML = "Done!";
         output.appendChild(msg);
 
-        var out = document.createElement("a");
-        out.href = url;
-        out.download = title;  
-        out.style.display = "none";  
-        document.body.appendChild(out);
-        out.click();  
-        document.body.removeChild(out); 
+        fetch(url)
+          .then(response => response.blob())
+          .then(blob => {
+            const a = document.createElement("a");
+            a.href = URL.createObjectURL(blob);
+            a.download = title + ".mp3";
+            document.body.appendChild(a);
+            a.click();
+            document.body.removeChild(a);
+          });
       }, function(status) {
-        if(status == 404) {
-          outMSG("Not Found");
-          return;
-        }
         outMSG("Something went wrong. ERROR CODE " + status);
       });
     }
@@ -219,7 +216,7 @@
         xhr.responseType = 'text';
         xhr.onload = function() {
           var status = xhr.status;
-          if (status == 200) {
+          if (status === 200) {
             resolve(xhr.response);
           } else {
             reject(status);
