--- a/index.html
+++ b/index.html
@@ -154,60 +154,56 @@
     document.getElementById("year").textContent = new Date().getFullYear();
 
     function run() {
-      var id = document.getElementById("songid").value;
-      var output = document.getElementById("run");
-      output.innerHTML = '';
+  var id = document.getElementById("songid").value;
+  var output = document.getElementById("run");
+  output.innerHTML = '';
 
-      var text = document.createElement("p");
+  var text = document.createElement("p");
 
-      if(id === "") {
-        text.innerHTML = "No Song ID";
-        output.appendChild(text);
+  if (id === "") {
+    text.innerHTML = "No Song ID";
+    output.appendChild(text);
+    return;
+  }
+
+  text.innerHTML = "Wait...";
+  output.appendChild(text);
+
+  getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id)
+    .then(function(body) {
+      var data = JSON.parse(body).contents;
+      var code = JSON.parse(body).status.http_code;
+
+      if (code !== 200) {
+        outMSG(code === 404 ? "Not Found" : "Something went wrong. ERROR CODE " + code);
         return;
       }
 
-      text.innerHTML = "Wait...";
-      output.appendChild(text);
+      var url = data.substring(data.indexOf("<![CDATA[") + 9);
+      url = url.substring(url.indexOf("embedController([") + 17);
+      url = url.substring(0, url.indexOf("\",\""));
+      url = url.substring(0, url.indexOf("?"));
+      url = url.substring(url.indexOf("url") + 3);
+      url = url.substring(url.indexOf(":\"") + 2);
+      url = url.replace(/\\\//g, "/");
 
-      getPage("https://api.allorigins.win/get?url=https%3A%2F%2Fwww.newgrounds.com%2Faudio%2Flisten%2F" + id)
-      .then(function(body) {
-        var data = JSON.parse(body).contents;
-        var code = JSON.parse(body).status.http_code;
+      var title = data.substring(data.indexOf("<title>") + 7);
+      title = title.substring(0, title.lastIndexOf("</title>"));
 
-        if(code !== 200) {
-          outMSG(code === 404 ? "Not Found" : "Something went wrong. ERROR CODE " + code);
-          return;
-        }
+      var msg = document.createElement("p");
+      msg.innerHTML = "Done!";
+      output.appendChild(msg);
 
-        var url = data.substring(data.indexOf("<![CDATA[") + 9);
-        url = url.substring(url.indexOf("embedController([") + 17);
-        url = url.substring(0, url.indexOf("\",\""));
-        url = url.substring(0, url.indexOf("?"));
-        url = url.substring(url.indexOf("url") + 3);
-        url = url.substring(url.indexOf(":\"") + 2);
-        url = url.replace(/\\\//g, "/");
+      var audio = document.createElement("audio");
+      audio.controls = true;
+      audio.src = url;
+      audio.style.marginTop = "20px";
+      output.appendChild(audio);
 
-        var title = data.substring(data.indexOf("<title>") + 7);
-        title = title.substring(0, title.lastIndexOf("</title>"));
-
-        var msg = document.createElement("p");
-        msg.innerHTML = "Done!";
-        output.appendChild(msg);
-
-        fetch(url)
-          .then(response => response.blob())
-          .then(blob => {
-            const a = document.createElement("a");
-            a.href = URL.createObjectURL(blob);
-            a.download = title + ".mp3";
-            document.body.appendChild(a);
-            a.click();
-            document.body.removeChild(a);
-          });
-      }, function(status) {
-        outMSG("Something went wrong. ERROR CODE " + status);
-      });
-    }
+    }, function(status) {
+      outMSG("Something went wrong. ERROR CODE " + status);
+    });
+}
 
     var getPage = function(url) {
       return new Promise(function(resolve, reject) {
