--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     url = url.substring(url.indexOf(":\"") + 2);
     url = url.replace(/\\\//g, "/");
 
-    outMSG("Downloading...");
+    outMSG("Done!");
 
     const win = window.open("", "_blank");
 
