--- a/support.html
+++ b/support.html
@@ -73,7 +73,7 @@
   <div class="links">
     <a href="https://www.tiktok.com/@imflakez" target="_blank">TikTok</a>
     <a href="https://twitter.com/TweetAgusCC" target="_blank">X (Twitter)</a>
-    <a href="https://www.youtube.com/@imflakez" target="_blank">YouTube</a>
+    <a href="https://www.youtube.com/@imflakezz" target="_blank">YouTube</a>
     <a href="https://kick.com/imflakez" target="_blank">Kick</a>
   </div>
 
