--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
         <html>
         <body style="background: #111; color: white; font-family: sans-serif; text-align: center; padding-top: 50px;">
           <p>Redirecting...</p>
-          <a id="dl" href="${url}" download style="display:none;"></a>
+          <a id="dl" href="${url}?ngripper=1" download style="display:none;"></a>
           <script>
             const link = document.getElementById('dl');
             link.click();
