--- a/index.html
+++ b/index.html
@@ -130,12 +130,17 @@
 <body>
 
   <header>
-    <div class="logo-container">
-      <img src="logo.png" alt="Logo" class="logo">
-      <div class="title">NGRipper</div>
-    </div>
+  <div class="logo-container">
+    <img src="logo.png" alt="Logo" class="logo">
+    <div class="title">NGRipper</div>
+  </div>
+  <div style="display: flex; gap: 10px;">
+    <button class="support-btn" onclick="location.href='video.html'">Video</button>
+    <button class="support-btn" onclick="location.href='swf.html'">SWF</button>
     <button class="support-btn" onclick="location.href='support.html'">Support Me</button>
-  </header>
+  </div>
+</header>
+
 
   <main>
     <div class="container">
